# ComfyUI-TRELLIS2

./: .gitattributes  .gitignore  AGENTS.md  DEV_PROVISIONING.md  README.md  __init__.py  install.py  install_compilers.py  prestartup_script.py  pyproject.toml  requirements.txt
installation/: __init__.py  compile.py  config.py  cuda_env.py  detect.py  flash_attn.py  vcredist.py  wheel_install.py
nodes/: __init__.py  nodes_export.py  nodes_inference.py  nodes_loader.py  nodes_unwrap.py
trellis2/models/: __init__.py
trellis2/modules/: image_feature_extractor.py
trellis2/modules/sparse/: basic.py
trellis2/pipelines/: base.py  trellis2_image_to_3d.py
trellis2/pipelines/rembg/: BiRefNet.py
trellis2/utils/: disk_offload.py
workflows/: geometry_only.json  geometry_texture.json  image_to_geometry.json  remove_background.json  simple.json
